# wiggle-puppy

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix  prd.json  progress.txt
.github/workflows/: ci.yml
docs/agents/complete/initial-mvp/: PROMPT.md  prd.json  progress.txt
wiggle-puppy-cli/: Cargo.toml
wiggle-puppy-cli/src/: main.rs
wiggle-puppy-core/: Cargo.toml
wiggle-puppy-core/src/: agent.rs  config.rs  error.rs  event.rs  lib.rs  prd.rs  runner.rs
wiggle-puppy-core/tests/: integration.rs
